--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
   "dependencies": {
     "@amida-tech/blue-button-cms": "^1.5.6",
     "@amida-tech/blue-button-meta": "^1.7.3",
+    "@amida-tech/blue-button-model": "^1.10.3",
     "@amida-tech/blue-button-xml": "^1.8.5",
     "lodash": "^4.17.21",
-    "winston": "^3.8.1"
+    "winston": "^3.8.1",
+    "z-schema": "^5.0.4"
   },
   "devDependencies": {
     "brfs": "^2.0.2",
